--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-
-workflows:
-  release-workflow:
-    name: Release
+    - certificates/
