--- a/movie/pubspec.yaml
+++ b/movie/pubspec.yaml
@@ -44,7 +44,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - ../certificates/certificates.pem
+    - ../certificates/
 
   # To add assets to your package, add an assets section, like this:
   # assets:
